# os_practice_2022

./: README.md
homework_1/: CMakeLists.txt  hello.c  hello.h  main.c  print_utilities.c  print_utilities.h
homework_1/include/: print_utilities.h
homework_2/: CMakeLists.txt  blocking_queue.c  main.c
homework_2/include/: blocking_queue.h
homework_3/: CMakeLists.txt  main.c
homework_3/ipc/: ipc.c
homework_4/: threadpool.cc
homework_4/include/: threadpool.h
homework_5/: CMakeLists.txt  main.cc  threadpool.cc
homework_5/include/: threadpool.h
homework_6/: CMakeLists.txt  ping_singular.c  pong_singular.c
homework_7/: CMakeLists.txt  client.c  server.c
